--- a/package.json
+++ b/package.json
@@ -9,19 +9,34 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@fontsource/roboto": "^4.5.8",
+    "@hookform/resolvers": "^3.0.0",
+    "@mui/icons-material": "^5.11.11",
+    "@mui/material": "^5.11.14",
+    "@mui/styled-engine-sc": "^5.11.11",
+    "@mui/x-date-pickers": "^5.0.4",
+    "@tanstack/react-query": "^4.28.0",
+    "@types/axios": "^0.14.0",
     "@types/node": "18.15.3",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "@types/yup": "^0.32.0",
+    "axios": "^1.3.4",
+    "date-fns": "^2.29.3",
+    "dayjs": "^1.11.7",
     "eslint": "^8.36.0",
     "eslint-config-next": "13.2.4",
     "leaflet": "^1.9.3",
+    "lodash": "^4.17.21",
     "mapbox-gl": "^2.13.0",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.7",
     "react-icons": "^4.8.0",
+    "react-input-mask": "^2.0.4",
     "react-leaflet": "^4.2.1",
     "react-no-ssr": "^1.1.0",
     "react-query": "^3.39.3",
@@ -33,6 +48,8 @@
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.3",
+    "@types/lodash": "^4.14.191",
+    "@types/react-input-mask": "^3.0.2",
     "@types/react-no-ssr": "^1.1.3"
   }
 }
