--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "onmaps",
   "version": "0.1.0",
@@ -26,17 +27,18 @@
     "axios": "^1.3.4",
     "date-fns": "^2.29.3",
     "dayjs": "^1.11.7",
+    "dotenv": "^16.0.3",
     "eslint": "^8.36.0",
     "eslint-config-next": "13.2.4",
     "leaflet": "^1.9.3",
     "lodash": "^4.17.21",
     "mapbox-gl": "^2.13.0",
-    "next": "13.2.4",
+    "next": "^13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.7",
     "react-icons": "^4.8.0",
-    "react-input-mask": "^2.0.4",
+    "react-input-mask": "3.0.0-alpha.2",
     "react-leaflet": "^4.2.1",
     "react-no-ssr": "^1.1.0",
     "react-query": "^3.39.3",
@@ -49,7 +51,7 @@
   "devDependencies": {
     "@types/leaflet": "^1.9.3",
     "@types/lodash": "^4.14.191",
-    "@types/react-input-mask": "^3.0.2",
+    "@types/react-input-mask": "^3.0.1",
     "@types/react-no-ssr": "^1.1.3"
   }
 }
