--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "onmaps",
   "version": "0.1.0",
@@ -40,6 +39,7 @@
     "react-icons": "^4.8.0",
     "react-input-mask": "3.0.0-alpha.2",
     "react-leaflet": "^4.2.1",
+    "react-material-ui-carousel": "^3.4.2",
     "react-no-ssr": "^1.1.0",
     "react-query": "^3.39.3",
     "react-ssr-prepass": "^1.5.0",
